# PLHomework

./: .gitignore  README.md
HW1 - Calc/: CMakeLists.txt  CMakeLists.txt.user.e663ff3  Calc.cpp  Calc.h  main.cpp
HW2 - GoL/: CMakeLists.txt  README.md  main.cpp
HW2 - GoL/Classes/: Gol.cpp  Gol.h  GolDrawCell.cpp  GolDrawCell.h  GolDrawField.cpp  GolDrawField.h
HW2 - GoL/Classes/GUI/: ImageButton.cpp  ImageButton.h  TextBox.cpp  TextBox.h  TextButton.cpp  TextButton.h  UiLayout.cpp  UiLayout.h
SettingsLib/: CMakeLists.txt  Settings.cpp  Settings.h
